WIP: team and technologies page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -64,9 +64,9 @@
                 <div class="quick-access">
                     <h3>Acesso Rápido</h3>
                     <div class="links">
-                        <span class="circle"><img src="../img/whatsapp.svg" alt="whatsapp"></span>
-                        <span class="circle"><img src="../img/email.svg" alt="email"></span>
-                        <span class="circle"><img src="../img/instagram.svg" alt="instagram"></span>
+                        <span class="circle"><img src="../img/icons/whatsapp.svg" alt="whatsapp"></span>
+                        <span class="circle"><img src="../img/icons/email.svg" alt="email"></span>
+                        <span class="circle"><img src="../img/icons/instagram.svg" alt="instagram"></span>
                     </div>
                 </div>
             </div>
