--- a/team/team.html
+++ b/team/team.html
@@ -16,5 +16,58 @@
         <a href="../contact/contact.html" class="menu-item">Contato</a>
       </div>
     </nav>
+
+    <section class="team">
+      <h2 class="title">Conheça mais sobre a equipe Hyperion!</h2> 
+      <div class="members">
+        <div class="member">
+          <a href="https://github.com/arthur-lessa" target="_blank">
+            <img src="../img/members/Arthur.jpeg" alt="Arthur">
+          </a>
+          <h3>Arthur Lessa</h3>
+          <h4>Desenvolvedor Frontend</h4>
+        </div>
+
+        <div class="member">
+          <a href="https://github.com/ferr-ffk" target="_blank">
+            <img src="../img/members/Fernando.jpeg" alt="Fernando">
+          </a>
+          <h3>Fernando Freitas</h3>
+          <h4>Desenvolvedor Frontend</h4>
+        </div>
+
+        <div class="member">
+          <a href="https://github.com/henriquydta" target="_blank">
+            <img src="../img/members/Henry.jpeg" alt="Henry">
+          </a>
+          <h3>Henriquy Dias</h3>
+          <h4>Desenvolvedor Backend / Scrum Master</h4>
+        </div>
+
+        <div class="member">
+          <a href="https://github.com/pantolfoo" target="_blank">
+            <img src="../img/members/Isabella.jpeg" alt="Isabella">
+          </a>
+          <h3>Isabella Pantolfo</h3>
+          <h4>Desenvolvedora Frontend</h4>
+        </div>
+
+        <div class="member">
+          <a href="https://github.com/mouraluck" target="_blank">
+            <img src="../img/members/Lucas.jpeg" alt="Lucas">
+          </a>
+          <h3>Lucas Moura</h3>
+          <h4>Desenvolvedor Backend / Product Manager</h4>
+        </div>
+
+        <div class="member">
+          <a href="https://github.com/MateusKekw">
+            <img src="../img/members/Mateus.jpg" alt="Mateus">
+          </a>
+          <h3>Mateus Armando</h3>
+          <h4>Desenvolvedor Backend</h4>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
