--- a/technologies/technologies.html
+++ b/technologies/technologies.html
@@ -1,20 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hyperion Page</title>
-    <link rel="stylesheet" href="technologies.css">
-</head>
-<body>
+    <link rel="stylesheet" href="technologies.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="menu-items">
-          <a href="../home/index.html" class="menu-item">Home</a>
-          <a href="../project/project.html" class="menu-item">O Projeto</a>
-          <a href="../team/team.html" class="menu-item">Equipe</a>
-          <a href="tecnologies.html" class="menu-item">Tecnologias</a>
-          <a href="../contact/contact.html" class="menu-item">Contato</a>
+      <div class="menu-items">
+        <a href="../home/index.html" class="menu-item">Home</a>
+        <a href="../project/project.html" class="menu-item">O Projeto</a>
+        <a href="../team/team.html" class="menu-item">Equipe</a>
+        <a href="tecnologies.html" class="menu-item">Tecnologias</a>
+        <a href="../contact/contact.html" class="menu-item">Contato</a>
+      </div>
+    </nav>
+
+    <section class="technologies-section">
+      <h2 class="title">Tecnologias Utilizadas</h2>
+
+      <div class="tech-cards-container">
+        <div class="card">
+          <h3>Desenvolvimento Frontend</h3>
+
+          <div class="card-content">
+            <h4>Framework utilizado</h4>
+            <div class="tech-item">
+              <a href="https://angular.dev" target="_blank">
+                <img src="../img/technologies/angular.svg" alt="Angular" />
+              </a>
+              <p>Angular</p>
+            </div>
+
+            <h4>Linguagens utilizadas</h4>
+            <div class="row-items">
+              <div class="tech-item">
+                <a
+                  href="https://developer.mozilla.org/pt-BR/docs/Web/HTML"
+                  target="_blank"
+                >
+                  <img src="../img/technologies/html.svg" alt="HTML" />
+                </a>
+                <p>HTML</p>
+              </div>
+
+              <div class="tech-item">
+                <a href="https://sass-lang.com/documentation/" target="_blank">
+                  <img src="../img/technologies/sass.svg" alt="CSS" />
+                </a>
+                <p>Sass</p>
+              </div>
+
+              <div class="tech-item">
+                <a href="https://www.typescriptlang.org/docs/" target="_blank">
+                  <img
+                    src="../img/technologies/typescript.svg"
+                    alt="Typescript"
+                  />
+                </a>
+                <p>TypeScript</p>
+              </div>
+            </div>
+          </div>
         </div>
-      </nav>
-</body>
+
+        <div class="card">
+          <h3>Desenvolvimento Backend</h3>
+
+          <div class="card-content">
+            <h4>Framework utilizado</h4>
+            <div class="tech-item">
+              <a href="https://spring.io/projects/spring-boot" target="_blank">
+                <img src="../img/technologies/spring.png" alt="Spring" />
+              </a>
+              <p>Spring</p>
+            </div>
+
+            <h4>Linguagem utilizada</h4>
+            <div class="tech-item">
+              <a href="https://www.java.com/pt-BR/" target="_blank">
+                <img src="../img/technologies/java.svg" alt="Java" />
+              </a>
+              <p>Java</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>Banco de Dados</h3>
+
+          <div class="card-content">
+            <h4>Linguagem utilizada</h4>
+            <div class="tech-item">
+              <a
+                href="https://learn.microsoft.com/pt-br/sql/?view=sql-server-ver16"
+                target="_blank"
+              >
+                <img src="../img/technologies/SQL.png" alt="SQL" />
+              </a>
+              <p>SQL</p>
+            </div>
+
+            <h4>Ferramentas</h4>
+            <div class="tech-item">
+              <a
+                href="https://www.mysql.com/products/workbench/"
+                target="_blank"
+              >
+                <img src="../img/technologies/mysql.svg" alt="MySQL" />
+              </a>
+              <p>MySQL Workbench</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>Prototipação</h3>
+
+          <div class="card-content">
+            <h4>Ferramentas</h4>
+            <div class="row-items">
+              <div class="tech-item">
+                <a href="https://www.canva.com" target="_blank">
+                  <img src="../img/technologies/canva.svg" alt="Canva" />
+                </a>
+                <p>Canva</p>
+              </div>
+
+              <div class="tech-item">
+                <a href="https://www.figma.com" target="_blank">
+                  <img src="../img/technologies/figma.svg" alt="Figma" />
+                </a>
+                <p>Figma</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
