--- a/team/team.html
+++ b/team/team.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hyperion Page</title>
     <link rel="stylesheet" href="team.css" />
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
     <nav class="navbar">
