feat(layout)!: adicionar layout para mobile

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -9,14 +9,24 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="menu-items">
-        <a href="../home/index.html" class="menu-item">Home</a>
-        <a href="../project/project.html" class="menu-item">O Projeto</a>
-        <a href="../team/team.html" class="menu-item">Equipe</a>
-        <a href="../technologies/technologies.html" class="menu-item">Tecnologias</a>
-        <a href="contact.html" class="menu-item">Contato</a>
-      </div>
-    </nav>
+        <h1>Hyperion</h1>
+        <div class="menu-items">
+          <a href="../home/index.html" class="menu-item">Home</a>
+          <a href="../project/project.html" class="menu-item">O Projeto</a>
+          <a href="../team/team.html" class="menu-item">Equipe</a>
+          <a href="../technologies/technologies.html" class="menu-item">Tecnologias</a>
+          <a href="../contact/contact.html" class="menu-item">Contato</a>
+        </div>
+        <button id="navbar-button" class="mobile-menu">#</button>
+        <div id="menu-items-mobile" class="menu-items-mobile">
+          <button id="navbar-button" class="mobile-menu">#</button>
+          <a href="../home/index.html" class="menu-item">Home</a>
+          <a href="../project/project.html" class="menu-item">O Projeto</a>
+          <a href="../team/team.html" class="menu-item">Equipe</a>
+          <a href="../technologies/technologies.html" class="menu-item">Tecnologias</a>
+          <a href="../contact/contact.html" class="menu-item">Contato</a>
+        </div>
+      </nav>
 
     <section class="contact-section">
 
@@ -73,5 +83,6 @@
             </div>
         </div>
     </section>
+    <script src="../script.js"></script>
   </body>
 </html>
