--- a/home/index.html
+++ b/home/index.html
@@ -9,8 +9,18 @@
   </head>
   <body>
     <nav class="navbar">
+      <h1>Hyperion</h1>
       <div class="menu-items">
-        <a href="index.html" class="menu-item">Home</a>
+        <a href="../home/index.html" class="menu-item">Home</a>
+        <a href="../project/project.html" class="menu-item">O Projeto</a>
+        <a href="../team/team.html" class="menu-item">Equipe</a>
+        <a href="../technologies/technologies.html" class="menu-item">Tecnologias</a>
+        <a href="../contact/contact.html" class="menu-item">Contato</a>
+      </div>
+      <button id="navbar-button" class="mobile-menu">#</button>
+      <div id="menu-items-mobile" class="menu-items-mobile">
+        <button id="navbar-button" class="mobile-menu">#</button>
+        <a href="../home/index.html" class="menu-item">Home</a>
         <a href="../project/project.html" class="menu-item">O Projeto</a>
         <a href="../team/team.html" class="menu-item">Equipe</a>
         <a href="../technologies/technologies.html" class="menu-item">Tecnologias</a>
@@ -35,5 +45,6 @@
         </p>
       </div>
     </section>
+    <script src="../script.js"></script>
   </body>
 </html>
